// Dictionary-encoded OTLP metrics format
// Based on OTLP metrics proto but with attribute keys dictionary-encoded

syntax = "proto3";

package otlpmetricsdict;

option go_package = "github.com/danielthank/15712/go/pkg/otlpmetricsdict";

// MetricsDictBatch wraps metrics data with a string table for dictionary encoding
message MetricsDictBatch {
  // String table containing all unique attribute keys in this batch
  repeated string string_table = 1;

  // The metrics data with KeyValue.key replaced by int32 references
  repeated ResourceMetrics resource_metrics = 2;
}

// KeyValue with dictionary-encoded key
message KeyValue {
  int32 key_ref = 1;  // Index into MetricsDictBatch.string_table
  AnyValue value = 2;
}

// AnyValue - same as OTLP
message AnyValue {
  oneof value {
    string string_value = 1;
    bool bool_value = 2;
    int64 int_value = 3;
    double double_value = 4;
    ArrayValue array_value = 5;
    KeyValueList kvlist_value = 6;
    bytes bytes_value = 7;
  }
}

message ArrayValue {
  repeated AnyValue values = 1;
}

message KeyValueList {
  repeated KeyValue values = 1;
}

// InstrumentationScope - same as OTLP but uses dict KeyValue
message InstrumentationScope {
  string name = 1;
  string version = 2;
  repeated KeyValue attributes = 3;
  uint32 dropped_attributes_count = 4;
}

// Resource - same as OTLP but uses dict KeyValue
message Resource {
  repeated KeyValue attributes = 1;
  uint32 dropped_attributes_count = 2;
}

// ResourceMetrics - same structure as OTLP
message ResourceMetrics {
  Resource resource = 1;
  repeated ScopeMetrics scope_metrics = 2;
  string schema_url = 3;
}

// ScopeMetrics - same structure as OTLP
message ScopeMetrics {
  InstrumentationScope scope = 1;
  repeated Metric metrics = 2;
  string schema_url = 3;
}

// Metric - same as OTLP but uses dict KeyValue for metadata
message Metric {
  string name = 1;
  string description = 2;
  string unit = 3;
  oneof data {
    Gauge gauge = 5;
    Sum sum = 7;
    Histogram histogram = 9;
    ExponentialHistogram exponential_histogram = 10;
    Summary summary = 11;
  }
  repeated KeyValue metadata = 12;
}

// Gauge - same as OTLP
message Gauge {
  repeated NumberDataPoint data_points = 1;
}

// Sum - same as OTLP
message Sum {
  repeated NumberDataPoint data_points = 1;
  AggregationTemporality aggregation_temporality = 2;
  bool is_monotonic = 3;
}

// Histogram - same as OTLP
message Histogram {
  repeated HistogramDataPoint data_points = 1;
  AggregationTemporality aggregation_temporality = 2;
}

// ExponentialHistogram - same as OTLP
message ExponentialHistogram {
  repeated ExponentialHistogramDataPoint data_points = 1;
  AggregationTemporality aggregation_temporality = 2;
}

// Summary - same as OTLP
message Summary {
  repeated SummaryDataPoint data_points = 1;
}

enum AggregationTemporality {
  AGGREGATION_TEMPORALITY_UNSPECIFIED = 0;
  AGGREGATION_TEMPORALITY_DELTA = 1;
  AGGREGATION_TEMPORALITY_CUMULATIVE = 2;
}

// NumberDataPoint - same as OTLP but uses dict KeyValue
message NumberDataPoint {
  repeated KeyValue attributes = 7;
  fixed64 start_time_unix_nano = 2;
  fixed64 time_unix_nano = 3;
  oneof value {
    double as_double = 4;
    sfixed64 as_int = 6;
  }
  repeated Exemplar exemplars = 5;
  uint32 flags = 8;
}

// HistogramDataPoint - same as OTLP but uses dict KeyValue
message HistogramDataPoint {
  repeated KeyValue attributes = 9;
  fixed64 start_time_unix_nano = 2;
  fixed64 time_unix_nano = 3;
  fixed64 count = 4;
  optional double sum = 5;
  repeated fixed64 bucket_counts = 6;
  repeated double explicit_bounds = 7;
  repeated Exemplar exemplars = 8;
  uint32 flags = 10;
  optional double min = 11;
  optional double max = 12;
}

// ExponentialHistogramDataPoint - same as OTLP but uses dict KeyValue
message ExponentialHistogramDataPoint {
  repeated KeyValue attributes = 1;
  fixed64 start_time_unix_nano = 2;
  fixed64 time_unix_nano = 3;
  fixed64 count = 4;
  optional double sum = 5;
  sint32 scale = 6;
  fixed64 zero_count = 7;
  message Buckets {
    sint32 offset = 1;
    repeated uint64 bucket_counts = 2;
  }
  Buckets positive = 8;
  Buckets negative = 9;
  uint32 flags = 10;
  repeated Exemplar exemplars = 11;
  optional double min = 12;
  optional double max = 13;
  double zero_threshold = 14;
}

// SummaryDataPoint - same as OTLP but uses dict KeyValue
message SummaryDataPoint {
  repeated KeyValue attributes = 7;
  fixed64 start_time_unix_nano = 2;
  fixed64 time_unix_nano = 3;
  fixed64 count = 4;
  double sum = 5;
  message ValueAtQuantile {
    double quantile = 1;
    double value = 2;
  }
  repeated ValueAtQuantile quantile_values = 6;
  uint32 flags = 8;
}

// Exemplar - same as OTLP but uses dict KeyValue
message Exemplar {
  repeated KeyValue filtered_attributes = 7;
  fixed64 time_unix_nano = 2;
  oneof value {
    double as_double = 3;
    sfixed64 as_int = 6;
  }
  bytes span_id = 4;
  bytes trace_id = 5;
}
