// Dictionary-encoded OTLP traces format
// Based on OTLP traces proto but with attribute keys dictionary-encoded

syntax = "proto3";

package otlptracesdict;

option go_package = "github.com/danielthank/15712/go/pkg/otlptracesdict";

// TracesDictBatch wraps traces data with a string table for dictionary encoding
message TracesDictBatch {
  // String table containing all unique attribute keys in this batch
  repeated string string_table = 1;

  // The traces data with KeyValue.key replaced by int32 references
  repeated ResourceSpans resource_spans = 2;
}

// KeyValue with dictionary-encoded key
message KeyValue {
  int32 key_ref = 1;  // Index into TracesDictBatch.string_table
  AnyValue value = 2;
}

// AnyValue - same as OTLP
message AnyValue {
  oneof value {
    string string_value = 1;
    bool bool_value = 2;
    int64 int_value = 3;
    double double_value = 4;
    ArrayValue array_value = 5;
    KeyValueList kvlist_value = 6;
    bytes bytes_value = 7;
  }
}

message ArrayValue {
  repeated AnyValue values = 1;
}

message KeyValueList {
  repeated KeyValue values = 1;
}

// InstrumentationScope - same as OTLP but uses dict KeyValue
message InstrumentationScope {
  string name = 1;
  string version = 2;
  repeated KeyValue attributes = 3;
  uint32 dropped_attributes_count = 4;
}

// Resource - same as OTLP but uses dict KeyValue
message Resource {
  repeated KeyValue attributes = 1;
  uint32 dropped_attributes_count = 2;
}

// ResourceSpans - same structure as OTLP
message ResourceSpans {
  Resource resource = 1;
  repeated ScopeSpans scope_spans = 2;
  string schema_url = 3;
}

// ScopeSpans - same structure as OTLP
message ScopeSpans {
  InstrumentationScope scope = 1;
  repeated Span spans = 2;
  string schema_url = 3;
}

// Span - same as OTLP but uses dict KeyValue for attributes
message Span {
  bytes trace_id = 1;
  bytes span_id = 2;
  string trace_state = 3;
  bytes parent_span_id = 4;
  fixed32 flags = 16;
  string name = 5;

  enum SpanKind {
    SPAN_KIND_UNSPECIFIED = 0;
    SPAN_KIND_INTERNAL = 1;
    SPAN_KIND_SERVER = 2;
    SPAN_KIND_CLIENT = 3;
    SPAN_KIND_PRODUCER = 4;
    SPAN_KIND_CONSUMER = 5;
  }
  SpanKind kind = 6;

  fixed64 start_time_unix_nano = 7;
  fixed64 end_time_unix_nano = 8;
  repeated KeyValue attributes = 9;
  uint32 dropped_attributes_count = 10;

  message Event {
    fixed64 time_unix_nano = 1;
    string name = 2;
    repeated KeyValue attributes = 3;
    uint32 dropped_attributes_count = 4;
  }
  repeated Event events = 11;
  uint32 dropped_events_count = 12;

  message Link {
    bytes trace_id = 1;
    bytes span_id = 2;
    string trace_state = 3;
    repeated KeyValue attributes = 4;
    uint32 dropped_attributes_count = 5;
    fixed32 flags = 6;
  }
  repeated Link links = 13;
  uint32 dropped_links_count = 14;

  Status status = 15;
}

// Status - same as OTLP
message Status {
  string message = 2;

  enum StatusCode {
    STATUS_CODE_UNSET = 0;
    STATUS_CODE_OK = 1;
    STATUS_CODE_ERROR = 2;
  }
  StatusCode code = 3;
}
